<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".CalculatorActivity"
                tools:deviceIds="wear_square">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/test_result"
            android:id="@+id/textView"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|center_horizontal"/>

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="19dp"
            >


        <Button
                style="@style/EvenSmallButton"
                android:text="@string/seven"
                android:id="@+id/seven_btn"
                android:layout_row="0"
                android:layout_column="0"/>


        <Button
                style="@style/EvenSmallButton"
                android:text="@string/eight"
                android:id="@+id/eight_btn"
                android:layout_row="0"
                android:layout_column="1"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/nine"
                android:id="@+id/nine_btn"
                android:layout_row="0"
                android:layout_column="2"/>


        <Button
                style="@style/EvenSmallButton"
                android:text="@string/division"
                android:id="@+id/divider_btn"
                android:layout_row="0"
                android:layout_column="3"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/four"
                android:id="@+id/four_btn"
                android:layout_row="1"
                android:layout_column="0"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/five"
                android:id="@+id/five_btn"
                android:layout_row="1"
                android:layout_column="1"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/six"
                android:id="@+id/six_btn"
                android:layout_row="1"
                android:layout_column="2"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/product"
                android:id="@+id/prod_btn"
                android:layout_row="1"
                android:layout_column="3"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/one"
                android:id="@+id/one_btn"
                android:layout_row="2"
                android:layout_column="0"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/two"
                android:id="@+id/two_btn"
                android:layout_row="2"
                android:layout_column="1"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/three"
                android:id="@+id/three_btn"
                android:layout_row="2"
                android:layout_column="2"/>


        <Button
                style="@style/EvenSmallButton"
                android:text="@string/minus"
                android:id="@+id/minus_btn"
                android:layout_row="2"
                android:layout_column="3"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/dot"
                android:id="@+id/dot_btn"
                android:layout_row="3"
                android:layout_column="0"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/zero"
                android:id="@+id/zero_btn"
                android:layout_row="3"
                android:layout_column="1"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/equals"
                android:id="@+id/equals_btn"
                android:layout_row="3"
                android:layout_column="2"/>

        <Button
                style="@style/EvenSmallButton"
                android:text="@string/plus"
                android:id="@+id/plus_btn"
                android:layout_row="3"
                android:layout_column="3"/>

    </GridLayout>

</RelativeLayout>
